<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AndroidAndJsActivity">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_73"
            android:background="@color/color_FF198CFF"
            android:minHeight="?attr/actionBarSize"
            android:orientation="vertical"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_73"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_25" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48">

                    <FrameLayout
                        android:id="@+id/layout_back"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imv_back"
                            android:layout_width="@dimen/dp_9"
                            android:layout_height="@dimen/dp_16"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/dp_12"
                            android:layout_marginEnd="@dimen/dp_12"
                            android:src="@mipmap/icon_arrowhead_left"
                            android:visibility="visible"
                            tools:ignore="ContentDescription" />

                    </FrameLayout>

                    <TextView
                        android:id="@+id/tev_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_48"
                        android:gravity="center"
                        android:text="@string/android_and_js"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_20" />

                </FrameLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_230" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:background="@color/color_4876FF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:gravity="center"
            android:paddingStart="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_25"
            android:text="@string/this_is_the_h5_page"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20" />

        <TextView
            android:id="@+id/tev_android_to_js"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:background="@drawable/corners_25_color_ff198cff"
            android:gravity="center"
            android:paddingStart="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_25"
            android:text="@string/android_to_js"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20" />

        <TextView
            android:id="@+id/tev_android_to_js2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:background="@drawable/corners_25_color_ff198cff"
            android:gravity="center"
            android:paddingStart="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_25"
            android:text="@string/android_to_js2"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20" />

        <TextView
            android:id="@+id/tev_android_to_js3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:background="@drawable/corners_25_color_ff198cff"
            android:gravity="center"
            android:paddingStart="@dimen/dp_25"
            android:paddingEnd="@dimen/dp_25"
            android:text="@string/android_to_js3"
            android:textColor="@color/white" />

    </LinearLayout>

</layout>